--- a/code_su_dung_spark.ipynb
+++ b/code_su_dung_spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "96321b8e",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "f3614822",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "13272157",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "3916ee48",
    "metadata": {},
    "outputs": [],
@@ -119,18 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "id": "b9521fea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \"Toán\", \"Ngữ văn\", \"KHXH\", \"KHTN\", \"Lịch sử\", \"Địa lí\", \"GDCD\", \"sinh học\", \"vật lí\", \"hoa\", \"N1\"\n",
-    "\n",
     "processed_df = data_df.withColumn(\"name\", replace_unicode_udf(\"name\")) \\\n",
     "    .withColumn(\"name\", unescape_html_udf(\"name\")) \\\n",
-    "    .withColumn(\"dob\", process_dob_udf(\"dob\")) \\\n",
     "    .withColumn(\"score\", process_score_udf(\"score\")) \\\n",
-    "    .withColumn(\"test\", split(normal_udf(\"score\"), \" \")) \\\n",
     "    .withColumn(\"toan\", split(normal_udf(\"score\"), \" \")[0]) \\\n",
     "    .withColumn(\"ngu_van\", split(normal_udf(\"score\"), \" \")[1]) \\\n",
     "    .withColumn(\"khxh\", split(normal_udf(\"score\"), \" \")[2]) \\\n",
@@ -143,77 +139,24 @@
     "    .withColumn(\"hoc_hoc\", split(normal_udf(\"score\"), \" \")[9]) \\\n",
     "    .withColumn(\"N1\", split(normal_udf(\"score\"), \" \")[10])\n",
     "\n",
-    "\n"
+    "processed_df = processed_df.drop('score')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "121a991e",
+   "execution_count": 20,
+   "id": "da8ea388",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Row(name='PHẠM HOÀNG HƯƠNG ÁI', dob='04/11/2002\\\\r', score='To&#225;n:   6.60   Ng\\\\xe1\\\\xbb\\\\xaf v\\\\xc4\\\\x83n:   6.25   L\\\\xe1\\\\xbb\\\\x8bch s\\\\xe1\\\\xbb\\\\xad:   5.75   \\\\xc4\\\\x90\\\\xe1\\\\xbb\\\\x8ba l&#237;:   7.00   GDCD:   7.25   KHXH: 6.67   Ti\\\\xe1\\\\xba\\\\xbfng Anh:   5.20   \\\\r', toan='To&#225;n:', ngu_van='', khxh='', khtn='6.60', lich_su='', dia_ly='', gdcd='Ng\\\\xe1\\\\xbb\\\\xaf', sinh_hoc='v\\\\xc4\\\\x83n:', vat_li='', hoc_hoc='', N1='6.25')"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "processed_df.first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "5fbc06e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+------------+--------------------+----------+-------+----+----+-------+------+--------------+-----------+------+-------+----+\n",
-      "|                name|         dob|               score|      toan|ngu_van|khxh|khtn|lich_su|dia_ly|          gdcd|   sinh_hoc|vat_li|hoc_hoc|  N1|\n",
-      "+--------------------+------------+--------------------+----------+-------+----+----+-------+------+--------------+-----------+------+-------+----+\n",
-      "| PHẠM HOÀNG HƯƠNG ÁI|04/11/2002\\r|To&#225;n:   6.60...|To&#225;n:|       |    |6.60|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |6.25|\n",
-      "|  ĐẶNG HUỲNH VĨNH AN|13/12/2002\\r|To&#225;n:   8.20...|To&#225;n:|       |    |8.20|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |7.75|\n",
-      "|LÂM NGUYỄN MỘNG T...|06/04/2001\\r|To&#225;n:   6.80...|To&#225;n:|       |    |6.80|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |6.75|\n",
-      "|    LÊ TIÊU HOÀNG AN|18/11/2002\\r|To&#225;n:   7.80...|To&#225;n:|       |    |7.80|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |6.25|\n",
-      "|         LƯ THUẬN AN|14/01/2002\\r|To&#225;n:   6.40...|To&#225;n:|       |    |6.40|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |6.50|\n",
-      "|         MAI BÌNH AN|14/06/2002\\r|To&#225;n:   6.80...|To&#225;n:|       |    |6.80|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |7.50|\n",
-      "|         MAI XUÂN AN|16/03/2002\\r|To&#225;n:   8.40...|To&#225;n:|       |    |8.40|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |8.25|\n",
-      "|NGUYỄN HUỲNH KHÁN...|28/07/2002\\r|To&#225;n:   6.80...|To&#225;n:|       |    |6.80|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |7.00|\n",
-      "|  NGUYỄN TRẦN HÒA AN|14/11/2002\\r|To&#225;n:   7.20...|To&#225;n:|       |    |7.20|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |8.00|\n",
-      "|NGUYỄN VƯƠNG THÙY AN|14/08/2002\\r|To&#225;n:   8.40...|To&#225;n:|       |    |8.40|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |7.75|\n",
-      "|    PHẠM THỊ HỒNG AN|11/03/2002\\r|To&#225;n:   6.40...|To&#225;n:|       |    |6.40|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |7.75|\n",
-      "|   TÝ THIỀU THUẬN AN|28/09/2002\\r|To&#225;n:   8.00...|To&#225;n:|       |    |8.00|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |5.25|\n",
-      "|         VÕ THIÊN AN|27/03/2002\\r|To&#225;n:   8.40...|To&#225;n:|       |    |8.40|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |5.75|\n",
-      "|         VŨ THANH AN|19/11/2002\\r|To&#225;n:   8.40...|To&#225;n:|       |    |8.40|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |7.50|\n",
-      "| BÙI NGUYỄN MINH ANH|18/03/2002\\r|To&#225;n:   8.20...|To&#225;n:|       |    |8.20|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |6.75|\n",
-      "|  BÙI THỤY QUỲNH ANH|24/07/2002\\r|To&#225;n:   8.60...|To&#225;n:|       |    |8.60|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |6.75|\n",
-      "|    BÙI TRẦN LAN ANH|11/03/2002\\r|To&#225;n:   8.60...|To&#225;n:|       |    |8.60|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |6.75|\n",
-      "| CAO NGỌC PHƯƠNG ANH|06/06/2002\\r|To&#225;n:   8.00...|To&#225;n:|       |    |8.00|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |6.50|\n",
-      "|       CHÂU XUÂN ANH|30/09/2002\\r|To&#225;n:   8.20...|To&#225;n:|       |    |8.20|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |4.50|\n",
-      "|   CHUNG VŨ THÚY ANH|08/03/2002\\r|To&#225;n:   8.40...|To&#225;n:|       |    |8.40|       |      |Ng\\xe1\\xbb\\xaf|v\\xc4\\x83n:|      |       |6.25|\n",
-      "+--------------------+------------+--------------------+----------+-------+----+----+-------+------+--------------+-----------+------+-------+----+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "processed_df.show()"
+    "# Lưu pyspark dataframe dưới dạng .csv\n",
+    "# processed_df.write.csv(\"test.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da8ea388",
+   "id": "83da9b78",
    "metadata": {},
    "outputs": [],
    "source": []
