--- a/code_su_dung_spark.ipynb
+++ b/code_su_dung_spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "96321b8e",
    "metadata": {},
    "outputs": [],
@@ -10,17 +10,16 @@
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import udf, split\n",
     "from pyspark.sql.types import StringType, IntegerType, FloatType\n",
+    "import pandas as pd\n",
     "import html\n",
     "\n",
     "# Khởi tạo SparkSession\n",
-    "spark = SparkSession.builder \\\n",
-    "    .appName(\"Process Data\") \\\n",
-    "    .getOrCreate()"
+    "spark = SparkSession.builder.appName(\"Process Data\").getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "f3614822",
    "metadata": {},
    "outputs": [],
@@ -35,22 +34,17 @@
     "            i = i.split()\n",
     "            chars.append(i[0])\n",
     "            codes.append(i[1])\n",
-    "\n",
     "    for i in range(len(chars)):\n",
     "        text = text.replace(codes[i], chars[i])\n",
-    "\n",
     "    return text[:-2]\n",
-    "\n",
     "\n",
     "# Định nghĩa hàm để chuyển đổi HTML entities thành ký tự Unicode\n",
     "def unescape_html(text):\n",
     "    return html.unescape(text)\n",
     "\n",
-    "\n",
     "# Định nghĩa hàm để chuyển đổi định dạng ngày sinh\n",
     "def process_dob(dob):\n",
-    "    return dob[:-2].split(\"/\")\n",
-    "\n",
+    "    return dob[:-2]\n",
     "\n",
     "# Định nghĩa hàm để xử lý điểm thi và chuyển đổi về lower case\n",
     "def process_score(score):\n",
@@ -60,17 +54,17 @@
     "        if score[i:i+2] == \"&#\":\n",
     "            score = score[:i] + html.unescape(score[i:i+5]) + score[i+6:]\n",
     "    score = score.replace(\":\", \"\")\n",
-    "    score = score.replace(\"khxh \", \"khxh   \")\n",
-    "    score = score.replace(\"khtn \", \"khtn   \")\n",
+    "#     return \"\".join(score)\n",
+    "    score = score.replace(\"KHXH \", \"KHXH   \")\n",
+    "    score = score.replace(\"KHTN \", \"KHTN   \")\n",
     "    score_list = score.split(\"   \")\n",
     "    data = []\n",
-    "    for subject in [\"Toán\", \"Ngữ văn\", \"KHXH\", \"KHTN\", \"Lịch sử\", \"Địa lí\", \"GDCD\", \"sinh học\", \"vật lí\", \"hoa\", \"N1\"]:\n",
+    "    for subject in [\"Toán\", \"Ngữ văn\", \"KHXH\", \"KHTN\", \"Lịch sử\", \"Địa lí\", \"GDCD\", \"Sinh học\", \"Vật lí\", \"Hóa học\", \"Tiếng Anh\"]:\n",
     "        if subject in score_list:\n",
     "            data.append(str(float(score_list[score_list.index(subject) + 1])))  # Chuyen 7.00 -> 7.0\n",
     "        else:\n",
-    "            data.append(\"NULL\")\n",
+    "            data.append(\"\")\n",
     "    return \" \".join(data)\n",
-    "\n",
     "\n",
     "# Định nghĩa hàm để chuyển đổi các trường dữ liệu về định dạng số\n",
     "def to_float(value):\n",
@@ -85,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "13272157",
    "metadata": {},
    "outputs": [],
@@ -103,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "3916ee48",
    "metadata": {},
    "outputs": [],
@@ -119,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "b9521fea",
    "metadata": {},
    "outputs": [],
@@ -127,36 +121,389 @@
     "processed_df = data_df.withColumn(\"name\", replace_unicode_udf(\"name\")) \\\n",
     "    .withColumn(\"name\", unescape_html_udf(\"name\")) \\\n",
     "    .withColumn(\"score\", process_score_udf(\"score\")) \\\n",
+    "    .withColumn(\"dob\", process_dob_udf(\"dob\")) \\\n",
     "    .withColumn(\"toan\", split(normal_udf(\"score\"), \" \")[0]) \\\n",
     "    .withColumn(\"ngu_van\", split(normal_udf(\"score\"), \" \")[1]) \\\n",
-    "    .withColumn(\"khxh\", split(normal_udf(\"score\"), \" \")[2]) \\\n",
-    "    .withColumn(\"khtn\", split(normal_udf(\"score\"), \" \")[3]) \\\n",
+    "    .withColumn(\"tieng_anh\", split(normal_udf(\"score\"), \" \")[10]) \\\n",
     "    .withColumn(\"lich_su\", split(normal_udf(\"score\"), \" \")[4]) \\\n",
     "    .withColumn(\"dia_ly\", split(normal_udf(\"score\"), \" \")[5]) \\\n",
     "    .withColumn(\"gdcd\", split(normal_udf(\"score\"), \" \")[6]) \\\n",
+    "    .withColumn(\"khxh\", split(normal_udf(\"score\"), \" \")[2]) \\\n",
     "    .withColumn(\"sinh_hoc\", split(normal_udf(\"score\"), \" \")[7]) \\\n",
     "    .withColumn(\"vat_li\", split(normal_udf(\"score\"), \" \")[8]) \\\n",
     "    .withColumn(\"hoc_hoc\", split(normal_udf(\"score\"), \" \")[9]) \\\n",
-    "    .withColumn(\"N1\", split(normal_udf(\"score\"), \" \")[10])\n",
+    "    .withColumn(\"khtn\", split(normal_udf(\"score\"), \" \")[3])\n",
     "\n",
     "processed_df = processed_df.drop('score')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "da8ea388",
+   "execution_count": 6,
+   "id": "ce73504a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+----------+----+-------+---------+-------+------+----+----+--------+------+-------+----+\n",
+      "|               name|       dob|toan|ngu_van|tieng_anh|lich_su|dia_ly|gdcd|khxh|sinh_hoc|vat_li|hoc_hoc|khtn|\n",
+      "+-------------------+----------+----+-------+---------+-------+------+----+----+--------+------+-------+----+\n",
+      "|PHẠM HOÀNG HƯƠNG ÁI|04/11/2002| 6.6|   6.25|      5.2|   5.75|   7.0|7.25|6.67|        |      |       |    |\n",
+      "| ĐẶNG HUỲNH VĨNH AN|13/12/2002| 8.2|   7.75|      7.0|    7.0|  7.25| 8.5|7.58|        |      |       |    |\n",
+      "+-------------------+----------+----+-------+---------+-------+------+----+----+--------+------+-------+----+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "processed_df.show(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5702fec9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lưu pyspark dataframe dưới dạng .csv\n",
-    "# processed_df.write.csv(\"test.csv\")"
+    "pd_df = processed_df.toPandas()\n",
+    "so_bao_danh = arr = ['0'+str(2000000+i) for i in range(1, len(pd_df)+1)]\n",
+    "pd_df.insert(loc=0, column='sbd', value=so_bao_danh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "da185d67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sbd</th>\n",
+       "      <th>name</th>\n",
+       "      <th>dob</th>\n",
+       "      <th>toan</th>\n",
+       "      <th>ngu_van</th>\n",
+       "      <th>tieng_anh</th>\n",
+       "      <th>lich_su</th>\n",
+       "      <th>dia_ly</th>\n",
+       "      <th>gdcd</th>\n",
+       "      <th>khxh</th>\n",
+       "      <th>sinh_hoc</th>\n",
+       "      <th>vat_li</th>\n",
+       "      <th>hoc_hoc</th>\n",
+       "      <th>khtn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>02000001</td>\n",
+       "      <td>PHẠM HOÀNG HƯƠNG ÁI</td>\n",
+       "      <td>04/11/2002</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>6.25</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>5.75</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>6.67</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>02000002</td>\n",
+       "      <td>ĐẶNG HUỲNH VĨNH AN</td>\n",
+       "      <td>13/12/2002</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>7.75</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>7.58</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>02000003</td>\n",
+       "      <td>LÂM NGUYỄN MỘNG THÙY AN</td>\n",
+       "      <td>06/04/2001</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>7.75</td>\n",
+       "      <td>8.25</td>\n",
+       "      <td>6.92</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>02000004</td>\n",
+       "      <td>LÊ TIÊU HOÀNG AN</td>\n",
+       "      <td>18/11/2002</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>6.25</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>6.25</td>\n",
+       "      <td>6.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>02000005</td>\n",
+       "      <td>LƯ THUẬN AN</td>\n",
+       "      <td>14/01/2002</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>6.25</td>\n",
+       "      <td>6.17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sbd                     name         dob toan ngu_van tieng_anh  \\\n",
+       "0  02000001      PHẠM HOÀNG HƯƠNG ÁI  04/11/2002  6.6    6.25       5.2   \n",
+       "1  02000002       ĐẶNG HUỲNH VĨNH AN  13/12/2002  8.2    7.75       7.0   \n",
+       "2  02000003  LÂM NGUYỄN MỘNG THÙY AN  06/04/2001  6.8    6.75       6.0   \n",
+       "3  02000004         LÊ TIÊU HOÀNG AN  18/11/2002  7.8    6.25       5.6   \n",
+       "4  02000005              LƯ THUẬN AN  14/01/2002  6.4     6.5       8.2   \n",
+       "\n",
+       "  lich_su dia_ly  gdcd  khxh sinh_hoc vat_li hoc_hoc  khtn  \n",
+       "0    5.75    7.0  7.25  6.67                                \n",
+       "1     7.0   7.25   8.5  7.58                                \n",
+       "2    4.75   7.75  8.25  6.92                                \n",
+       "3                                 7.0    5.5    6.25  6.25  \n",
+       "4                                 5.5   6.75    6.25  6.17  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a7def6c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sbd</th>\n",
+       "      <th>name</th>\n",
+       "      <th>dob</th>\n",
+       "      <th>toan</th>\n",
+       "      <th>ngu_van</th>\n",
+       "      <th>tieng_anh</th>\n",
+       "      <th>lich_su</th>\n",
+       "      <th>dia_ly</th>\n",
+       "      <th>gdcd</th>\n",
+       "      <th>khxh</th>\n",
+       "      <th>sinh_hoc</th>\n",
+       "      <th>vat_li</th>\n",
+       "      <th>hoc_hoc</th>\n",
+       "      <th>khtn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>74448</th>\n",
+       "      <td>02074449</td>\n",
+       "      <td>NGUYỄN ĐÌNH HẢI YẾN</td>\n",
+       "      <td>10/11/2002</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>5.92</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74449</th>\n",
+       "      <td>02074450</td>\n",
+       "      <td>NGUYỄN THỊ HẢI YẾN</td>\n",
+       "      <td>05/05/2002</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>8.25</td>\n",
+       "      <td>8.75</td>\n",
+       "      <td>7.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74450</th>\n",
+       "      <td>02074451</td>\n",
+       "      <td>NGUYỄN TRẦN TIỂU YẾN</td>\n",
+       "      <td>07/10/2002</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>8.25</td>\n",
+       "      <td>8.75</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74451</th>\n",
+       "      <td>02074452</td>\n",
+       "      <td>PHẠM THỊ KIM YẾN</td>\n",
+       "      <td>20/11/2002</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>9.25</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74452</th>\n",
+       "      <td>02074453</td>\n",
+       "      <td>VĂN HỒNG YẾN</td>\n",
+       "      <td>27/10/2002</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td></td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            sbd                  name         dob toan ngu_van tieng_anh  \\\n",
+       "74448  02074449   NGUYỄN ĐÌNH HẢI YẾN  10/11/2002  5.4    5.92             \n",
+       "74449  02074450    NGUYỄN THỊ HẢI YẾN  05/05/2002  8.6     7.0       6.2   \n",
+       "74450  02074451  NGUYỄN TRẦN TIỂU YẾN  07/10/2002  9.2     7.5       6.2   \n",
+       "74451  02074452      PHẠM THỊ KIM YẾN  20/11/2002  9.0     7.0       7.0   \n",
+       "74452  02074453          VĂN HỒNG YẾN  27/10/2002  5.6     6.5             \n",
+       "\n",
+       "      lich_su dia_ly gdcd khxh sinh_hoc vat_li hoc_hoc  khtn  \n",
+       "74448                               5.5    3.5     5.0  4.67  \n",
+       "74449                              6.75   8.25    8.75  7.92  \n",
+       "74450                              8.25   8.75     8.5   8.5  \n",
+       "74451                              6.75    8.0    9.25   8.0  \n",
+       "74452     6.5   7.25                                          "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd_df.tail()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83da9b78",
+   "id": "8d394422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd_df.to_csv(\"diem_thi.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbc90d27",
    "metadata": {},
    "outputs": [],
    "source": []
