--- a/code_su_dung_spark.ipynb
+++ b/code_su_dung_spark.ipynb
@@ -492,12 +492,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8d394422",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd_df.to_csv(\"diem_thi.csv\")"
+    "pd_df.to_csv(\"diem_thi.csv\", index = False)"
    ]
   },
   {
